As an app developer I want to get a list of all Influencers to show in my app [Delivers #186725243]
