# games-api/db.js
@@ -16,6 +16,8 @@ const db = {}
 db.Sequelize = Sequelize
 db.sequelize = sequelize
 db.games = require("./models/Game.model")(sequelize,Sequelize)
+db.influencers = require("./models/Influencer.model.js")(sequelize,Sequelize)
+//db.letsPlays = require("./models/LetsPlay.model")(sequelize,Sequelize)
 
 async function Sync() {
     await sequelize.sync({alter:true}) 
